# Chat_DB

Chat_DB/Client/: CMakeLists.txt  main.cpp
Chat_DB/Client/chat/: chat.h
Chat_DB/Server/: CMakeLists.txt  main.cpp
Chat_DB/Server/chat/: chat.h
Chat_DB/Server/connection/: connection.h
Chat_DB/Server/mysql_api/: mysql_api.h
